@@ -4,6 +4,7 @@
  * 32-bit unsigned integer images are now supported for importing masks (they already were for height maps)
  * When opening the Import Height Map or Import Mask screens, the file selection dialog is now immediately shown
  * It is now possible to add a Nether or End dimension to Imported worlds
+ * Crimson and Warped stems and hyphae are now treated as "logs" for purposes of leaf distance calculations
  * Bug fix: selecting a paint from the map from the Global Operations screen now works more than once
  * Bug fix: Merging a world that was not Imported will no longer cause it to be considered an Imported world afterwards
 
